--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.32.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "date-format": "^4.0.14",
