fix env template

--- a/.env.template
+++ b/.env.template
@@ -1,15 +1,16 @@
-ACCESS_TOKEN_SECRET_KEY
-REFRESH_TOKEN_SECRET_KEY
-ACCESS_TOKEN_EXPIRES_IN
-REFRESH_TOKEN_EXPIRES_IN
 BASE_URL
 PORT
 DB_HOST
+PASSWORD
 DB_TEST_HOST
 SECRET_KEY
+ACCESS_TOKEN_SECRET_KEY
+REFRESH_TOKEN_SECRET_KEY
 TOKEN_EXPIRES_IN
+ACCESS_TOKEN_EXPIRES_IN
+REFRESH_TOKEN_EXPIRES_IN
 SENDGRID_API_KEY
 PROJECT_EMAIL
-CLOUDINARY_CLOUD_NAME
-CLOUDINARY_API_KEY
-CLOUDINARY_API_SECRET
+CLOUDINARY_URL
+CLOUDINARY_CLOUD_NAME 
+CLOUDINARY_API_SECRET 
