--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,19 @@
 {
   "headers": [
     {
-      "source": "/api/(.*)",
+      "builds": [
+        {
+          "src": "index.js",
+          "use": "@now/node"
+        }
+      ],
+      "routes": [
+        {
+          "src": "/(.*)",
+
+          "dest": "index.js"
+        }
+      ],
       "headers": [
         { "key": "Access-Control-Allow-Origin", "value": "https://velogitara.github.io" },
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
