--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     {
       "builds": [
         {
-          "src": "index.js",
+          "src": "app.js",
           "use": "@now/node"
         }
       ],
@@ -11,7 +11,7 @@
         {
           "src": "/(.*)",
 
-          "dest": "index.js"
+          "dest": "app.js"
         }
       ],
       "headers": [
