--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
+    "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.6",
@@ -20,12 +20,12 @@
     "cross-env": "7.0.3",
     "date-format": "^4.0.14",
     "dotenv": "^16.0.3",
-    "express": "4.17.1",
+    "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
     "gravatar": "^1.8.2",
-    "jimp": "^0.16.2",
+    "jimp": "^1.6.0",
     "joi": "^17.6.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
     "morgan": "1.10.0",
@@ -41,6 +41,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
     "jest": "^29.3.1",
-    "nodemon": "2.0.15"
+    "nodemon": "^2.0.22"
   }
 }
