--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://velogitara.github.io/PetLy-project-Back/",
   "main": "index.js",
   "scripts": {
-    "start": "node api/index.js",
+    "start": "cross-env NODE_ENV=production node api/index.js",
     "dev": "cross-env NODE_ENV=development nodemon ./server.js",
     "lint": "eslint **/*.js",
     "lint:fix": "eslint --fix **/*.js",
